White text in menu to fix contrast

--- a/media/boom/css/boom/menu.less
+++ b/media/boom/css/boom/menu.less
@@ -20,7 +20,7 @@
 
 	a {
 		.text-large;
-		color: @lightest-grey;
+		color: @white;
 
 		&:hover, &:focus, &:active {
 			background: @light-grey;
